# Pratica-String-Search

./: BuscaString.cpp  CMakeLists.txt  README.md
bs-lib/: BuscaString.cpp  CMakeLists.txt
bs-lib/input/: texto.txt
